docs: use PHP types only and other API documentation fixes

--- a/api/devices-functions/ndarray-setdevice.mdx
+++ b/api/devices-functions/ndarray-setdevice.mdx
@@ -4,8 +4,9 @@ import TabItem from '@theme/TabItem';
 # NDArray::setDevice
 
 ```php
-public static function setDevice(long $deviceId): null;
+public static function setDevice(int $deviceId): void;
 ```
 Specifies which GPU device to use by ID. By default, all operations are performed on GPU id = 0.
+
 Use the `dumpDevices` method if you want to check the ID in a multi-GPU environment.
 
