--- a/api/initializers/ndarray-arange.mdx
+++ b/api/initializers/ndarray-arange.mdx
@@ -1,7 +1,7 @@
 # NDArray::arange
 
 ```php
-public static function arange(scalar $stop, scalar $start = 0, scalar $step = 1): NDArray;
+public static function arange(float|int $stop, float|int $start = 0, float|int $step = 1): NDArray;
 ```
 Return evenly spaced values within a given interval.
 
