--- a/api/initializers/ndarray-array.mdx
+++ b/api/initializers/ndarray-array.mdx
@@ -5,9 +5,9 @@ import TabItem from '@theme/TabItem';
 # NDArray::array
 
 ```php
-public static function array(array|scalar|GdImage $array): NDArray;
+public static function array(array|float|int $array): NDArray;
 ```
-Creates a new NDArray from a PHP array of longs or doubles. It is the equivalent of `new NDArray($array);`
+Creates a new NDArray from a PHP array. It is the equivalent of `new NDArray($array);`
 
 ---
 
