--- a/api/linear-algebra/ndarray-cond.mdx
+++ b/api/linear-algebra/ndarray-cond.mdx
@@ -1,7 +1,7 @@
 # NDArray::cond
 
 ```php
-public static function cond(NDArray|array $a): double;
+public static function cond(NDArray|array $a): float;
 ```
 Computes the condition number of an array.
 
