--- a/api/linear-algebra/ndarray-det.mdx
+++ b/api/linear-algebra/ndarray-det.mdx
@@ -1,7 +1,7 @@
 # NDArray::det
 
 ```php
-public static function det(NDArray|array $a): double;
+public static function det(NDArray|array $a): float;
 ```
 Computes the determinant of a square array, which represents the scaling factor of the volume
 of the array transformation.
