--- a/api/linear-algebra/ndarray-matmul.mdx
+++ b/api/linear-algebra/ndarray-matmul.mdx
@@ -1,7 +1,7 @@
 # NDArray::matmul
 
 ```php
-public static function matmul($a, $b);
+public static function matmul(NDArray|array $a, NDArray|array $b): NDArray;
 ```
 Performs matrix multiplication between two arrays and returns the result as a new array.
 
