--- a/api/linear-algebra/ndarray-matrixrank.mdx
+++ b/api/linear-algebra/ndarray-matrixrank.mdx
@@ -1,7 +1,7 @@
 # NDArray::matrix_rank
 
 ```php
-public static function matrix_rank(NDArray|array $a, scalar $tol = 1e-6): NDArray;
+public static function matrix_rank(NDArray|array $a, float $tol = 1e-6): NDArray;
 ```
 Calculates the numerical rank of a matrix, number of singular values of the array that are greater than tol.
 
