--- a/api/linear-algebra/ndarray-norm.mdx
+++ b/api/linear-algebra/ndarray-norm.mdx
@@ -1,7 +1,7 @@
 # NDArray::norm
 
 ```php
-public static function norm(NDArray|array $a, int $order = 2): double;
+public static function norm(NDArray|array $a, int $order = 2): float;
 ```
 Calculates different norms (e.g., L1 norm, L2 norm) of an array,
 providing various measures of its magnitude.
