--- a/api/linear-algebra/ndarray-trace.mdx
+++ b/api/linear-algebra/ndarray-trace.mdx
@@ -1,7 +1,7 @@
 # NDArray::trace
 
 ```php
-public static function trace(NDArray|array $a): double;
+public static function trace(NDArray|array $a): float;
 ```
 Computes the sum of the diagonal elements of a square array, also known as the trace of the array.
 
