--- a/api/logic/ndarray-all.mdx
+++ b/api/logic/ndarray-all.mdx
@@ -1,7 +1,7 @@
 # NDArray::all
 
 ```php
-public static function all(NDArray|array|scalar $a): bool;
+public static function all(NDArray|array|float|int $a): bool;
 ```
 Returns a single boolean value indicating whether all elements in the array evaluate to true. It checks if all
 elements are nonzero or equivalent to true.
