--- a/api/logic/ndarray-equal.mdx
+++ b/api/logic/ndarray-equal.mdx
@@ -1,7 +1,7 @@
 # NDArray::equal
 
 ```php
-public static function equal(NDArray|array|scalar $a, NDArray|array|scalar $b): NDArray;
+public static function equal(NDArray|array|float|int $a, NDArray|array|float|int $b): NDArray;
 ```
 Performs an element-wise equality comparison between two arrays and returns a
 new array of the same shape. The result will be 1 where the
