--- a/api/logic/ndarray-greater_equal.mdx
+++ b/api/logic/ndarray-greater_equal.mdx
@@ -1,7 +1,7 @@
 # NDArray::greater_equal
 
 ```php
-public static function greater(NDArray|array|scalar $a, NDArray|array|scalar $b): NDArray;
+public static function greater_equal(NDArray|array|scalar $a, NDArray|array|scalar $b): NDArray;
 ```
 Performs an element-wise greater-than-or-equal-to comparison between two arrays and returns a new
 array of the same shape. The result will be 1 where the elements in the first array are greater than
