--- a/api/logic/ndarray-less.mdx
+++ b/api/logic/ndarray-less.mdx
@@ -1,7 +1,7 @@
 # NDArray::less
 
 ```php
-public static function less(NDArray|array|scalar $a, NDArray|array|scalar $b): NDArray;
+public static function less(NDArray|array|float|int $a, NDArray|array|float|int $b): NDArray;
 ```
 Performs an element-wise less-than comparison between two arrays and returns a new array of the same shape.
 The result will be 1 where the elements in the first array are less than the corresponding elements in the second
