--- a/api/manipulation/ndarray-atleast_2d.mdx
+++ b/api/manipulation/ndarray-atleast_2d.mdx
@@ -4,8 +4,9 @@ import Tabs from "@theme/Tabs";
 # NDArray::atleast_2d
 
 ```php
-public function atleast_2d(NDArray|array|GdImage $array): array;
+public static function atleast_2d(NDArray|array|float|int $array): NDArray;
 ```
+Convert inputs to arrays with at least two dimensions.
 
 ---
 
