--- a/api/manipulation/ndarray-copy.mdx
+++ b/api/manipulation/ndarray-copy.mdx
@@ -1,7 +1,7 @@
 # NDArray::copy
 
 ```php
-public static function copy(NDArray|array|scalar $a, long $device = NULL): NDArray;
+public static function copy(NDArray|array|float|int $a, int $device = NULL): NDArray;
 ```
 Create a copy of array `$a`.
 
