--- a/api/manipulation/ndarray-size.mdx
+++ b/api/manipulation/ndarray-size.mdx
@@ -1,7 +1,7 @@
 # NDArray::size
 
 ```php
-public function size(): long;
+public function size(): int;
 ```
 Return the total number of elements in the NDArray.
 
