--- a/api/mathematical-functions/arithmetic/ndarray-negative.mdx
+++ b/api/mathematical-functions/arithmetic/ndarray-negative.mdx
@@ -1,7 +1,7 @@
 # NDArray::negative
 
 ```php
-public static function negative(NDArray|array|scalar $a): NDArray|double;
+public static function negative(NDArray|array|float|int $a): NDArray|float|int;
 ```
 Computes the element-wise negation (unary minus) of an array, returning a new array with the negation of each element.
 
