--- a/api/mathematical-functions/arithmetic/ndarray-pow.mdx
+++ b/api/mathematical-functions/arithmetic/ndarray-pow.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::pow
 
 ```php
-public static function pow(NDArray|array|scalar $a, NDArray|array|scalar $b): NDArray|scalar;
+public static function pow(NDArray|array|float|int $a, NDArray|array|float|int $b): NDArray|float|int;
 ```
 Raises each element of an array `$a` to a specified power `$b` and returns a new array containing the result.
 
