--- a/api/mathematical-functions/exponents-and-logarithms/ndarray-exp.mdx
+++ b/api/mathematical-functions/exponents-and-logarithms/ndarray-exp.mdx
@@ -4,10 +4,10 @@ import TabItem from '@theme/TabItem';
 # NDArray::exp
 
 ```php
-public static function exp(NDArray|array|scalar $array): NDArray|double;
+public static function exp(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Computes the element-wise exponential function of an array, returning a new array
-with each element raised to the power of `$a`.
+with each element raised to the power of `$array`.
 
 ---
 
