--- a/api/mathematical-functions/exponents-and-logarithms/ndarray-expm1.mdx
+++ b/api/mathematical-functions/exponents-and-logarithms/ndarray-expm1.mdx
@@ -4,10 +4,10 @@ import TabItem from '@theme/TabItem';
 # NDArray::expm1
 
 ```php
-public static function expm1(NDArray|array|scalar $array): NDArray|double;
+public static function expm1(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Calculates the element-wise exponential minus one function, returning
-a new array with each element raised to the power of `$a` - 1.
+a new array with each element raised to the power of `$array` - 1.
 
 ---
 
