--- a/api/mathematical-functions/exponents-and-logarithms/ndarray-log.mdx
+++ b/api/mathematical-functions/exponents-and-logarithms/ndarray-log.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::log
 
 ```php
-public static function log(NDArray|array|scalar $array): NDArray|double;
+public static function log(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Calculates the element-wise natural logarithm of an array, returning
 a new array with the natural logarithm of each element.
