--- a/api/mathematical-functions/extrema-finding/ndarray-max.mdx
+++ b/api/mathematical-functions/extrema-finding/ndarray-max.mdx
@@ -1,9 +1,9 @@
 # NDArray::max
 
 ```php
-public static function max(NDArray|array|scalar $a): double;
+public static function max(NDArray|array|float|int $a): float|int {};
 ```
-Finds the maximum value in the NDArray.
+Finds the maximum value in the array.
 
 ---
 
