--- a/api/mathematical-functions/extrema-finding/ndarray-min.mdx
+++ b/api/mathematical-functions/extrema-finding/ndarray-min.mdx
@@ -1,9 +1,9 @@
 # NDArray::min
 
 ```php
-public static function min(NDArray|array|scalar $a): double;
+public static function min(NDArray|array|float|int $a): float|int {};
 ```
-Finds the minimum value in the NDArray.
+Finds the minimum value in the array.
 
 ---
 
