--- a/api/mathematical-functions/hyperbolic/ndarray-tanh.mdx
+++ b/api/mathematical-functions/hyperbolic/ndarray-tanh.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::tanh
 
 ```php
-public static function tanh(NDArray|array|scalar $array): NDArray|double;
+public static function tanh(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Calculates the element-wise hyperbolic tangent of an array,
 returning a new array with the hyperbolic tangent of each element.
