--- a/api/mathematical-functions/rounding/ndarray-floor.mdx
+++ b/api/mathematical-functions/rounding/ndarray-floor.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::floor
 
 ```php
-public static function floor(NDArray|array|scalar $array): NDArray|double;
+public static function floor(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Rounds the elements of an array to the nearest integer less than or equal to the element,
 returning a new array with the elements rounded downwards.
