--- a/api/mathematical-functions/rounding/ndarray-trunc.mdx
+++ b/api/mathematical-functions/rounding/ndarray-trunc.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::trunc
 
 ```php
-public static function trunc(NDArray|array|scalar $array): NDArray|double;
+public static function trunc(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Truncates the elements of an array towards zero, returning a new array with the elements truncated towards zero.
 
