--- a/api/random/ndarray-poisson.mdx
+++ b/api/random/ndarray-poisson.mdx
@@ -1,7 +1,7 @@
 # NDArray::poisson
 
 ```php
-public static function poisson(array $size, scalar $lam = 1.0): NDArray;
+public static function poisson(array $size, float $lam = 1.0): NDArray;
 ```
 Generates an array of random integers from a Poisson distribution.
 The Poisson distribution models the number of events occurring in fixed intervals of time
