--- a/api/random/ndarray-uniform.mdx
+++ b/api/random/ndarray-uniform.mdx
@@ -1,7 +1,7 @@
 # NDArray::uniform
 
 ```php
-public static function uniform(array $size, scalar $low = 0.0, scalar $high = 1.0): NDArray;
+public static function uniform(array $size, float $low = 0.0, float $high = 1.0): NDArray;
 ```
 Generates an array of random numbers from a uniform distribution. The uniform distribution provides an equal
 probability for each value within a specified range.
