--- a/api/signal-processing/ndarray-convolve2d.mdx
+++ b/api/signal-processing/ndarray-convolve2d.mdx
@@ -1,7 +1,7 @@
 # NDArray::convolve2d
 
 ```php
-public static function convolve2d(NDArray|array|GdImage $a, NDArray|array|GdImage $b, string $mode, string $boundary, scalar $fill_value = 0.0f): NDArray;
+public static function convolve2d(NDArray|array $a, NDArray|array $b, string $mode, string $boundary, float $fill_value = 0.0): NDArray;
 ```
 Convolve two 2-dimensional arrays.
 
