--- a/api/statistics/ndarray-mean.mdx
+++ b/api/statistics/ndarray-mean.mdx
@@ -1,7 +1,7 @@
 # NDArray::mean
 
 ```php
-public static function mean(NDArray|array|scalar $a): double;
+public static function mean(NDArray|array|float|int $a): float|int;
 ```
 The arithmetic mean of the elements in the array. It computes the sum
 of all values and then divides it by the total number of elements in the array.
