--- a/api/statistics/ndarray-quantile.mdx
+++ b/api/statistics/ndarray-quantile.mdx
@@ -1,7 +1,7 @@
 # NDArray::quantile
 
 ```php
-public static function quantile(NDArray|array|scalar $a, scalar $q): double;
+ublic static function quantile(NDArray|array|float|int $a, float|int $q): float|int;
 ```
 Computes the specified quantile of the elements in the array. A quantile represents a
 particular value below which a given percentage of data falls. For example,
