--- a/api/statistics/ndarray-std.mdx
+++ b/api/statistics/ndarray-std.mdx
@@ -1,7 +1,7 @@
 # NDArray::std
 
 ```php
-public static function std(NDArray|array|scalar $a): double;
+public static function std(NDArray|array|float|int $a): float|int;
 ```
 Calculates the standard deviation of the elements in the array. It is the
 square root of the variance and provides a measure of the amount of variation
