--- a/api/statistics/ndarray-variance.mdx
+++ b/api/statistics/ndarray-variance.mdx
@@ -1,7 +1,7 @@
 # NDArray::variance
 
 ```php
-public static function variance(NDArray|array|scalar $array): double;
+public static function variance(NDArray|array|float|int $array): float|int;
 ```
 Calculates the variance of the elements in the array. It measures the average of the
 squared differences between each element and the mean.
