--- a/api/initializers/ndarray-identity.mdx
+++ b/api/initializers/ndarray-identity.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::identity
 
 ```php
-public static function identity(long $size): NDArray;
+public static function identity(int $size): NDArray;
 ```
 This function returns a square array, where the main diagonal consists of ones and all other
 elements are zeros. It takes a parameter `$size` which determines the number of rows and columns
