--- a/api/linear-algebra/ndarray-dot.mdx
+++ b/api/linear-algebra/ndarray-dot.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::dot
 
 ```php
-public static function dot(NDArray|array|scalar $a, NDArray|array|scalar $b): NDArray;
+public static function dot(NDArray|array|float|int $a, NDArray|array|float|int $b): NDArray;
 ```
 The `dot` function performs the dot product of two arrays. The behaviour of the function
 varies depending on the dimensions and shapes of the input arrays:
