--- a/api/linear-algebra/ndarray-inner.mdx
+++ b/api/linear-algebra/ndarray-inner.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::inner
 
 ```php
-public static function inner(NDArray|array|scalar $a, NDArray|array|scalar $b);
+public static function inner(NDArray|array|float|int $a, NDArray|array|float|int $b): NDArray|float;
 ```
 
 Calculates the inner product of two arrays. This operation involves multiplying corresponding
