--- a/api/logic/ndarray-greater.mdx
+++ b/api/logic/ndarray-greater.mdx
@@ -1,7 +1,7 @@
 # NDArray::greater
 
 ```php
-public static function greater(NDArray|array|scalar $a, NDArray|array|scalar $b): NDArray;
+public static function greater(NDArray|array|float|int $a, NDArray|array|float|int $b): NDArray;
 ```
 Performs an element-wise greater-than comparison between two arrays and returns a new array of the same shape.
 The result will be 1 where the elements in the first array are greater than the corresponding elements in the
