--- a/api/logic/ndarray-less_equal.mdx
+++ b/api/logic/ndarray-less_equal.mdx
@@ -1,7 +1,7 @@
 # NDArray::less_equal
 
 ```php
-public static function less_equal(NDArray|array|scalar $a, NDArray|array|scalar $b): NDArray;
+public static function less_equal(NDArray|array|float|int $a, NDArray|array|float|int $b): NDArray;
 ```
 Performs an element-wise less-than-or-equal-to comparison between two arrays and returns a
 new array of the same shape. The result will be 1 where the elements in the first array
