--- a/api/logic/ndarray-not_equal.mdx
+++ b/api/logic/ndarray-not_equal.mdx
@@ -1,7 +1,7 @@
 # NDArray::not_equal
 
 ```php
-public static function not_equal(NDArray|array|scalar $a, NDArray|array|scalar $b): NDArray;
+public static function not_equal(NDArray|array|float|int $a, NDArray|array|float|int $b): NDArray;
 ```
 Performs an element-wise inequality comparison between two arrays and returns a new array of the same shape.
 The result will be 1 where the elements are not equal and 0 where they are equal.
