--- a/api/manipulation/ndarray-atleast_3d.mdx
+++ b/api/manipulation/ndarray-atleast_3d.mdx
@@ -4,8 +4,9 @@ import Tabs from "@theme/Tabs";
 # NDArray::atleast_3d
 
 ```php
-public function atleast_3d(NDArray|array|GdImage $array): array;
+public static function atleast_3d(NDArray|array|float|int $array): NDArray;
 ```
+Convert inputs to arrays with at least three dimensions.
 
 ---
 
