--- a/api/manipulation/ndarray-flat.mdx
+++ b/api/manipulation/ndarray-flat.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::flatten
 
 ```php
-public static function flatten(NDArray|array|scalar $a): NDArray;
+public static function flatten(NDArray|array|float|int $a): NDArray;
 ```
 Return a **copy** of the array `$a` into one dimension.
 
