--- a/api/mathematical-functions/arithmetic/ndarray-add.mdx
+++ b/api/mathematical-functions/arithmetic/ndarray-add.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::add
 
 ```php
-public static function add(NDArray|array|scalar $a, NDArray|array|scalar $b): NDArray|scalar;
+public static function add(NDArray|array|float|int $a, NDArray|array|float|int $b): NDArray|float|int;
 ```
 Add arguments element-wise
 
