--- a/api/mathematical-functions/arithmetic/ndarray-divide.mdx
+++ b/api/mathematical-functions/arithmetic/ndarray-divide.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::divide
 
 ```php
-public static function divide(NDArray|array|scalar $a, NDArray|array|scalar $b): NDArray|double;
+public static function divide(NDArray|array|float|int $a, NDArray|array|float|int $b): NDArray|float|int;
 ```
 Return the division between two arrays element-wise
 
