--- a/api/mathematical-functions/arithmetic/ndarray-multiply.mdx
+++ b/api/mathematical-functions/arithmetic/ndarray-multiply.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::multiply
 
 ```php
-public static function multiply(NDArray|array|scalar $a, NDArray|array|scalar $b): NDArray;
+public static function multiply(NDArray|array|float|int $a, NDArray|array|float|int $b): NDArray|float|int;
 ```
 Multiply arrays element-wise
 
@@ -14,7 +14,7 @@ Multiply arrays element-wise
 
 #### `$a` `$b`
   - **Type** - NDArray | array | scalar
-  - The arrays to be multiplied, `$a` and `$b` must be of the same shape.
+  - The arrays to be multiplied.
 
 ---
 
