--- a/api/mathematical-functions/arithmetic/ndarray-subtract.mdx
+++ b/api/mathematical-functions/arithmetic/ndarray-subtract.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::subtract
 
 ```php
-public static function subtract($a, $b);
+public static function subtract(NDArray|array|float|int $a, NDArray|array|float|int $b): NDArray|float|int;
 ```
 Subtract two arrays element-wise
 
