--- a/api/mathematical-functions/exponents-and-logarithms/ndarray-exp2.mdx
+++ b/api/mathematical-functions/exponents-and-logarithms/ndarray-exp2.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::exp2
 
 ```php
-public static function exp(NDArray|array|scalar $array): NDArray|double;
+public static function exp2(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Computes the element-wise 2 raised to the power of an array,
 returning a new array with each element raised to the power of 2.
