--- a/api/mathematical-functions/exponents-and-logarithms/ndarray-log10.mdx
+++ b/api/mathematical-functions/exponents-and-logarithms/ndarray-log10.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::log10
 
 ```php
-public static function log10(NDArray|array|scalar $array): NDArray|double;
+public static function log10(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Calculates the element-wise base-10 logarithm of an array,
 returning a new array with the base-10 logarithm of each element.
