--- a/api/mathematical-functions/exponents-and-logarithms/ndarray-log1p.mdx
+++ b/api/mathematical-functions/exponents-and-logarithms/ndarray-log1p.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::log1p
 
 ```php
-public static function log1p(NDArray|array|scalar $array): NDArray|double;
+public static function log1p(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Computes the element-wise logarithm of one plus an array, returning a new array with
 the natural logarithm of each element plus one.
