--- a/api/mathematical-functions/exponents-and-logarithms/ndarray-log2.mdx
+++ b/api/mathematical-functions/exponents-and-logarithms/ndarray-log2.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::log2
 
 ```php
-public static function log2(NDArray|array|scalar $array): NDArray|double;
+public static function log2(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Computes the element-wise base-2 logarithm of an array,
 returning a new array with the base-2 logarithm of each element
