--- a/api/mathematical-functions/exponents-and-logarithms/ndarray-logb.mdx
+++ b/api/mathematical-functions/exponents-and-logarithms/ndarray-logb.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::logb
 
 ```php
-public static function logb(NDArray|array|scalar $array): NDArray|double;
+public static function logb(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Computes the element-wise logarithm base b of an array, returning
 a new array with the logarithm base b of each element.
