--- a/api/mathematical-functions/hyperbolic/ndarray-arccosh.mdx
+++ b/api/mathematical-functions/hyperbolic/ndarray-arccosh.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::arccosh
 
 ```php
-public static function arccosh(NDArray|array|scalar $array): NDArray|double;
+public static function arccosh(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Calculates the element-wise inverse hyperbolic cosine (arccosineh) of an array,
 returning a new array with the inverse hyperbolic cosine of each element.
