--- a/api/mathematical-functions/hyperbolic/ndarray-arcsinh.mdx
+++ b/api/mathematical-functions/hyperbolic/ndarray-arcsinh.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::arcsinh
 
 ```php
-public static function arcsinh(NDArray|array|scalar $array): NDArray|double;
+public static function arcsinh(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Computes the element-wise inverse hyperbolic sine (arcsineh) of an array, returning a new
 array with the inverse hyperbolic sine of each element.
