--- a/api/mathematical-functions/hyperbolic/ndarray-arctanh.mdx
+++ b/api/mathematical-functions/hyperbolic/ndarray-arctanh.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::arctanh
 
 ```php
-public static function arctanh(NDArray|array|scalar $array): NDArray|double;
+public static function arctanh(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Computes the element-wise inverse hyperbolic tangent (arctangenth) of an array,
 returning a new array with the inverse hyperbolic tangent of each element.
