--- a/api/mathematical-functions/hyperbolic/ndarray-cosh.mdx
+++ b/api/mathematical-functions/hyperbolic/ndarray-cosh.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::cosh
 
 ```php
-public static function cosh(NDArray|array|scalar $array): NDArray|double;
+public static function cosh(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Computes the element-wise hyperbolic cosine of an array,
 returning a new array with the hyperbolic cosine of each element.
