--- a/api/mathematical-functions/hyperbolic/ndarray-sinh.mdx
+++ b/api/mathematical-functions/hyperbolic/ndarray-sinh.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::sinh
 
 ```php
-public static function sinh(NDArray|array|scalar $array): NDArray|double;
+public static function sinh(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Calculates the element-wise hyperbolic sine of an array, returning a new array with the hyperbolic sine of each element.
 
