--- a/api/mathematical-functions/miscellaneous/ndarray-abs.mdx
+++ b/api/mathematical-functions/miscellaneous/ndarray-abs.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::abs
 
 ```php
-public static function abs(NDArray|array|scalar $array): NDArray|double;
+public static function abs(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Computes the element-wise absolute value of an array, returning a new array with non-negative elements.
 
