--- a/api/mathematical-functions/miscellaneous/ndarray-sign.mdx
+++ b/api/mathematical-functions/miscellaneous/ndarray-sign.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::sign
 
 ```php
-public static function sign(NDArray|array|scalar $array): NDArray|double;
+public static function sign(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Computes the element-wise sign of an array, returning a new array
 with the sign of each element (1 for positive, -1 for negative, 0 for zero).
