--- a/api/mathematical-functions/miscellaneous/ndarray-sinc.mdx
+++ b/api/mathematical-functions/miscellaneous/ndarray-sinc.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::sinc
 
 ```php
-public static function sinc(NDArray|array|scalar $array): NDArray|double;
+public static function sinc(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Calculates the element-wise sinc function of an array,
 returning a new array with the sinc function evaluated for each element.
