--- a/api/mathematical-functions/miscellaneous/ndarray-sqrt.mdx
+++ b/api/mathematical-functions/miscellaneous/ndarray-sqrt.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::sqrt
 
 ```php
-public static function sqrt(NDArray|array|scalar $array): NDArray|double;
+public static function sqrt(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Calculates the element-wise square root of an array, returning a new array with the positive square root of each element.
 
