--- a/api/mathematical-functions/miscellaneous/ndarray-square.mdx
+++ b/api/mathematical-functions/miscellaneous/ndarray-square.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::square
 
 ```php
-public static function square(NDArray|array|scalar $array): NDArray|double;
+public static function square(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Computes the element-wise square of an array, returning a new array with each element squared.
 
