--- a/api/mathematical-functions/rounding/ndarray-ceil.mdx
+++ b/api/mathematical-functions/rounding/ndarray-ceil.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::ceil
 
 ```php
-public static function ceil(NDArray|array|scalar $array): NDArray|double;
+public static function ceil(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Rounds the elements of an array to the nearest integer greater than or equal to the element,
 returning a new array with the elements rounded upwards.
