--- a/api/mathematical-functions/rounding/ndarray-fix.mdx
+++ b/api/mathematical-functions/rounding/ndarray-fix.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::fix
 
 ```php
-public static function fix(NDArray|array|scalar $array): NDArray|double;
+public static function fix(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Rounds the elements of an array towards zero, returning a new array with the elements rounded towards zero.
 
