--- a/api/mathematical-functions/rounding/ndarray-rint.mdx
+++ b/api/mathematical-functions/rounding/ndarray-rint.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::rint
 
 ```php
-public static function rint(NDArray|array|scalar $array): NDArray|double;
+public static function rint(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Rounds the elements of an array to the nearest integer,
 returning a new array with the elements rounded to the nearest integer.
