--- a/api/mathematical-functions/sum-products-differences/ndarray-sum.mdx
+++ b/api/mathematical-functions/sum-products-differences/ndarray-sum.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::sum
 
 ```php
-public static function sum(NDArray|array|scalar $a, long $axis = NULL): NDArray|double;
+public static function sum(NDArray|array|float|int $a, ?int $axis = NULL): NDArray|float|int;
 ```
 Calculates the sum of array elements along a given axis.
 
