--- a/api/mathematical-functions/trigonometric/ndarray-arccos.mdx
+++ b/api/mathematical-functions/trigonometric/ndarray-arccos.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::arccos
 
 ```php
-public static function arccos(NDArray|array|scalar $array): NDArray|double;
+public static function arccos(NDArray|array|float|int $array): NDArray|float|int ;
 ```
 Calculates the element-wise inverse cosine (arccosine) of an array,
 returning a new array with the arccosine of each element.
