--- a/api/mathematical-functions/trigonometric/ndarray-arcsin.mdx
+++ b/api/mathematical-functions/trigonometric/ndarray-arcsin.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::arcsin
 
 ```php
-public static function arcsin(NDArray|array|scalar $array): NDArray|double;
+public static function arcsin(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Computes the element-wise inverse sine (arcsine) of an array,
 returning a new array with the arcsine of each element.
