--- a/api/mathematical-functions/trigonometric/ndarray-arctan.mdx
+++ b/api/mathematical-functions/trigonometric/ndarray-arctan.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::arctan
 
 ```php
-public static function arctan(NDArray|array|scalar $array): NDArray|double;
+public static function arctan(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Computes the element-wise inverse tangent (arctangent) of an array,
 returning a new array with the arctangent of each element.
