--- a/api/mathematical-functions/trigonometric/ndarray-cos.mdx
+++ b/api/mathematical-functions/trigonometric/ndarray-cos.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::cos
 
 ```php
-public static function cos(NDArray|array|scalar $array): NDArray|double;
+public static function cos(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Computes the element-wise cosine of an array, returning
 a new array with the cosine of each element.
