--- a/api/mathematical-functions/trigonometric/ndarray-degrees.mdx
+++ b/api/mathematical-functions/trigonometric/ndarray-degrees.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::degrees
 
 ```php
-public static function degrees(NDArray|array|scalar $array): NDArray|double;
+public static function degrees(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Converts the element-wise angle from radians to degrees,
 returning a new array with the angles converted to degrees.
