--- a/api/mathematical-functions/trigonometric/ndarray-radians.mdx
+++ b/api/mathematical-functions/trigonometric/ndarray-radians.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::radians
 
 ```php
-public static function radians(NDArray|array|scalar $array): NDArray|double;
+public static function radians(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Converts the element-wise angle from degrees to radians,
 returning a new array with the angles converted to radians.
