--- a/api/mathematical-functions/trigonometric/ndarray-sin.mdx
+++ b/api/mathematical-functions/trigonometric/ndarray-sin.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::sin
 
 ```php
-public static function sin(NDArray|array|scalar $array): NDArray|double;
+public static function sin(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Calculates the element-wise sine of an array,
 returning a new array with the sine of each element.
