--- a/api/mathematical-functions/trigonometric/ndarray-tan.mdx
+++ b/api/mathematical-functions/trigonometric/ndarray-tan.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # NDArray::tan
 
 ```php
-public static function tan(NDArray|array|scalar $array): NDArray|double;
+public static function tan(NDArray|array|float|int $array): NDArray|float|int;
 ```
 Calculates the element-wise tangent of an array,
 returning a new array with the tangent of each element.
