--- a/api/random/ndarray-normal.mdx
+++ b/api/random/ndarray-normal.mdx
@@ -1,7 +1,7 @@
 # NDArray::normal
 
 ```php
-public static function normal(array $size, scalar $loc = 0.0, scalar $scale = 1.0): NDArray;
+public static function normal(array $size, float $loc = 0.0, float $scale = 1.0): NDArray;
 ```
 Generates an array of random numbers from a normal distribution. The normal distribution, also
-known as the Gaussian distribution, is a continuous probability distribution that is symmetric and bell-shaped
+known as the Gaussian distribution, is a continuous probability distribution that is symmetric and bell-shaped.
