--- a/api/statistics/ndarray-average.mdx
+++ b/api/statistics/ndarray-average.mdx
@@ -1,7 +1,7 @@
 # NDArray::average
 
 ```php
-public static function average(NDArray|array|scalar $array, NDArray|array|scalar $weights = NULL): double;
+public static function average(NDArray|array|float|int $array, NDArray|array|float|int|null $weights = NULL): float|int;
 ```
 The weighted average of the elements in the array. It allows the user to specify weights
 for each element to be considered in the computation of the average.
