--- a/api/statistics/ndarray-median.mdx
+++ b/api/statistics/ndarray-median.mdx
@@ -1,7 +1,7 @@
 # NDArray::median
 
 ```php
-public static function median(NDArray|array|scalar $a): double;
+public static function median(NDArray|array|float|int $a): float|int;
 ```
 The median of the elements in the array. It sorts the array, and if the number of elements is odd,
 it returns the middle value; if the number of elements is even, it returns the average of the two middle values
