docs: update to version 0.6.0

--- a/api/manipulation/ndarray-transpose.mdx
+++ b/api/manipulation/ndarray-transpose.mdx
@@ -12,6 +12,6 @@ Return the transpose of matrix `$a`
 :::tip
 
 #### GPU SUPPORTED
-This operation is supported by GPU (VRAM) and contains a custom CUDA kernel.
+This operation is supported by GPU (VRAM).
 
 :::
