docs: fix concatenate API documentation title

--- a/api/manipulation/ndarray-concatenate.mdx
+++ b/api/manipulation/ndarray-concatenate.mdx
@@ -1,4 +1,4 @@
-# NDArray::hstack
+# NDArray::concatenate
 
 ```php
 public static function concatenate(NDArray[] $arrays, ?int $axis = 0): NDArray;
